# Neural-Network

./: .gitignore  CMakeLists.txt  FindBestLearningRate.cpp  Green.cpp  Green.h  NeuralNet.cpp  NeuralNet.h  Node.cpp  Node.h  README.md  main.cpp
